--- a/HGE Project/HGE Project.vcxproj
+++ b/HGE Project/HGE Project.vcxproj
@@ -121,7 +121,7 @@
     <ClInclude Include="Renderer\SpriteRenderCommand.h" />
     <ClInclude Include="ResourceManager.h" />
     <ClInclude Include="Settings.h" />
-    <ClInclude Include="Square.h" />
+    <ClInclude Include="FloorTile.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="TriggerSystem\Trigger.h" />
@@ -174,7 +174,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">NotUsing</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="ResourceManager.cpp" />
-    <ClCompile Include="Square.cpp" />
+    <ClCompile Include="FloorTile.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
