--- a/HGE Project/HGE Project.vcxproj
+++ b/HGE Project/HGE Project.vcxproj
@@ -100,6 +100,7 @@
     <ClInclude Include="AudioSystem\SoundBase.h" />
     <ClInclude Include="AudioSystem\Stream.h" />
     <ClInclude Include="Avatar.h" />
+    <ClInclude Include="Camera.h" />
     <ClInclude Include="Defines.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameLoop.h" />
@@ -137,6 +138,7 @@
     <ClCompile Include="AudioSystem\SoundBase.cpp" />
     <ClCompile Include="AudioSystem\Stream.cpp" />
     <ClCompile Include="Avatar.cpp" />
+    <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameLoop.cpp" />
     <ClCompile Include="GameObjectManager.cpp" />
