--- a/HGE Project/HGE Project.vcxproj.filters
+++ b/HGE Project/HGE Project.vcxproj.filters
@@ -156,6 +156,9 @@
     <ClInclude Include="Camera.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="GameStateEnum.h">
+      <Filter>GameStates</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
